# sim_csv_script

./: .gitignore  README.md  csv_utils.py  development.md  example.csv  filter_script.py  generate.bat  make_distribution.bat  python_installation_steps.md  requirements.txt  requirements_gui_dev.txt  setup.cfg  setup.py  sim_csv_script.py
sim_csv_gui/: resources_rc.py
sim_csv_gui/UI/: ui_mainwindow.ui
sim_csv_script/: __main__.py  app.py
src/sim_csv_gui/: __main__.py  app.py  generate.bat  generate.py  resources_rc.py  ui_mainwindow.py
src/sim_csv_gui/UI/: ui_mainwindow.ui  ui_mainwindow_with_reader.ui
src/sim_csv_gui/qt5_examples/: two_buttons.py  y.py  y.ui
src/sim_csv_gui/resources/: resources.qrc  sources.txt
src/sim_csv_script/: __init__.py  app.py  csv_utils.py
