[metadata]
name = sim_csv_script
author = Andrew Ma
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent
    Topic :: System :: Hardware :: Universal Serial Bus (USB) :: Smart Card
    Intended Audience :: Telecommunications Industry

[options]
python_requires = >=3.6
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sim_csv_script = sim_csv_script.app:main